# KQBC

./: .gitignore  4dcode.txt  CMakeLists.txt  README.md  hit_n_run.m  kqbc  newx.m  note  opkqbc.cpp  predict.m  qbc  qbc.cpp  qbclearner.h  test.mat
active_qbc/: CMakeLists.txt  README.md  README.txt  oracle.h  qbc  qbc.cpp  qbc.h  t.out
active_qbc/backup/: CMakeLists.txt  old_linear_learner.cpp  with_comments.cpp
active_qbc/include/: color.h  oracle.h  polynomial.h  qbc.h
active_qbc/mistral/: .cvsignore
active_qbc/src/: main.cpp  oracle.cpp  qbc  qbc.cpp
by_gaobo/: kqbc  newx.m  note  predict.m  qbc  qbc.cpp
by_hoang/: kqbc.py
by_lili_lijiaying/: qbclearner.cpp
include/: color.h  polynomial.h  qbc.h
mistral/: .#mistral.h.1.4  .cproject  .project  CMakeLists.txt
mistral/cmake/: FindMistral.cmake
mistral/example/: CMakeLists.txt.old  example.cpp  make.command  test.cpp
mistral/parser/: CMakeLists.txt
mistral/sat-solver/: SatSolver.cpp
mistral/smtparser/: CMakeLists.txt
old/: CMakeLists.txt.old  org_newx.m  orgkqbc.cpp  polynomial.h  predict.asv  qbc  qbc.cpp  test.mat
old/backup/: makefile  oracle_in_one_file
src/: main.cpp  oracle.cpp  polynomial.cpp  qbc.cpp
